logo alignment changes fixed

--- a/careers.css
+++ b/careers.css
@@ -38,6 +38,21 @@
 
 
 }
+.logo
+{ 
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
+  flex-direction:row; 
+  margin-right: 30px; 
+} 
+
+ .logo img 
+ { 
+  width: 25px; 
+  margin: 0px 0px 0px 61em;
+  padding-top: 2px; 
+} 
 .active{
   background-color: #FF9900;
   border-left: #FFF solid 3px;
